--- a/KuromeKuroKit-WPF/App.xaml
+++ b/KuromeKuroKit-WPF/App.xaml
@@ -1,9 +1,8 @@
-﻿<prism:PrismApplication x:Class="KuromeKuroKit_WPF.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	     xmlns:prism="http://prismlibrary.com/"
-             xmlns:local="clr-namespace:KuromeKuroKit_WPF">
-    <Application.Resources>
-         
-    </Application.Resources>
+﻿<prism:PrismApplication
+    x:Class="KuromeKuroKit_WPF.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:KuromeKuroKit_WPF"
+    xmlns:prism="http://prismlibrary.com/">
+    <Application.Resources />
 </prism:PrismApplication>
