--- a/KuromeKuroKit-WPF/Views/MainWindow.xaml
+++ b/KuromeKuroKit-WPF/Views/MainWindow.xaml
@@ -1,19 +1,77 @@
-﻿<Window x:Class="KuromeKuroKit_WPF.Views.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:prism="http://prismlibrary.com/"
-        prism:ViewModelLocator.AutoWireViewModel="True"
-        Title="{Binding Title}" Height="350" Width="525">
-    <Grid>
+﻿<Window
+    x:Class="KuromeKuroKit_WPF.Views.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:lex="http://wpflocalizeextension.codeplex.com"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:prop="clr-namespace:KuromeKuroKit_WPF.Properties"
+    Title="{Binding Title}"
+    Width="525"
+    Height="350"
+    lex:LocalizeDictionary.DesignCulture="zh-TW"
+    lex:ResxLocalizationProvider.DefaultAssembly="KuromeKuroKit-WPF"
+    lex:ResxLocalizationProvider.DefaultDictionary="Strings"
+    prism:ViewModelLocator.AutoWireViewModel="True">
+    <Grid Margin="5">
         <!--<ContentControl prism:RegionManager.RegionName="ContentRegion" />-->
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition Height="20" />
+            <RowDefinition Height="20" />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
+            <ColumnDefinition Width="120" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="60" />
+            <ColumnDefinition Width="60" />
         </Grid.ColumnDefinitions>
-        <TextBox Text="{Binding LogMessage}" TextWrapping="Wrap" AcceptsReturn="True" AcceptsTab="True"/>
-        
+        <!--#region CSGO Root Dir-->
+        <Label
+            x:Name="lblCSGORootDir"
+            Grid.Row="0"
+            Grid.Column="0"
+            Padding="0"
+            Content="{lex:Loc}" />
+        <TextBox
+            Grid.Row="0"
+            Grid.Column="1"
+            Text="{Binding CSGORootFolder}" />
+        <Button
+            x:Name="btnBrowseCSGORootDir"
+            Grid.Row="0"
+            Grid.Column="2"
+            Command="{Binding BrowseCSGORootCommand}"
+            Content="{lex:Loc _Word_Browse}" />
+        <!--#endregion-->
+        <!--#region Player MDL Path-->
+        <Label
+            x:Name="lblPlayerMdlPath"
+            Grid.Row="1"
+            Grid.Column="0"
+            Padding="0"
+            Content="{lex:Loc}" />
+        <TextBox
+            Grid.Row="1"
+            Grid.Column="1"
+            Text="{Binding PlayerMdlInputPath}" />
+        <Button
+            x:Name="btnBrowsePlayerMdl"
+            Grid.Row="1"
+            Grid.Column="2"
+            Command="{Binding BrowsePlayerMdlCommand}"
+            Content="{lex:Loc _Word_Browse}" />
+        <!--#endregion-->
+
+
+        <!--#region Log-->
+        <TextBox
+            Grid.Row="2"
+            Grid.Column="1"
+            AcceptsReturn="True"
+            AcceptsTab="True"
+            Text="{Binding LogMessage}"
+            TextWrapping="Wrap" />
+        <!--#endregion-->
+
     </Grid>
 </Window>
