--- a/KuromeKuroKit-WPF/App.xaml
+++ b/KuromeKuroKit-WPF/App.xaml
@@ -3,6 +3,17 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:KuromeKuroKit_WPF"
-    xmlns:prism="http://prismlibrary.com/">
-    <Application.Resources />
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:system="clr-namespace:System;assembly=mscorlib">
+    <!--  https://docs.microsoft.com/en-us/windows/uwp/design/controls-and-patterns/resourcedictionary-and-xaml-resource-references  -->
+    <Application.Resources>
+        <ResourceDictionary>
+            <system:Double x:Key="mainRegionDesignWidth">500</system:Double>
+            <system:Double x:Key="mainRegionDesignHeight">500</system:Double>
+            <system:String x:Key="mainRegionName">MainRegion</system:String>
+            <Style x:Key="appButtonStyle" TargetType="Button">
+                <Setter Property="Background" Value="red" />
+            </Style>
+        </ResourceDictionary>
+    </Application.Resources>
 </prism:PrismApplication>
