--- a/KuromeKuroKit-WPF/App.xaml
+++ b/KuromeKuroKit-WPF/App.xaml
@@ -3,17 +3,36 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:KuromeKuroKit_WPF"
+    xmlns:mdlg="clr-namespace:MahApps.Metro.Controls.Dialogs;assembly=MahApps.Metro"
     xmlns:prism="http://prismlibrary.com/"
     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <!--  https://docs.microsoft.com/en-us/windows/uwp/design/controls-and-patterns/resourcedictionary-and-xaml-resource-references  -->
     <Application.Resources>
         <ResourceDictionary>
-            <system:Double x:Key="mainRegionDesignWidth">500</system:Double>
-            <system:Double x:Key="mainRegionDesignHeight">500</system:Double>
+            <!--#region UI Region Key-->
             <system:String x:Key="mainRegionName">MainRegion</system:String>
+            <!--#endregion-->
+            <!--#region Styling-->
+            <system:Double x:Key="mainRegionDesignWidth">500</system:Double>
+            <system:Double x:Key="mainRegionDesignHeight">300</system:Double>
             <Style x:Key="appButtonStyle" TargetType="Button">
                 <Setter Property="Background" Value="red" />
             </Style>
+
+            <!--  https://stackoverflow.com/questions/30751663/how-to-change-mahapps-metro-dialog-content-template-width  -->
+            <!--<Style BasedOn="{StaticResource {x:Type mdlg:BaseMetroDialog}}" TargetType="{x:Type mdlg:BaseMetroDialog}">
+                <Setter Property="Template">
+                    <Setter.Value>
+
+                    </Setter.Value>
+                </Setter>
+            </Style>-->
+            <!--#endregion-->
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Themes/Dark.Blue.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
