--- a/KuromeKuroKit-WPF/Views/AboutSub.xaml
+++ b/KuromeKuroKit-WPF/Views/AboutSub.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="KuromeKuroKit_WPF.Views.AboutView"
+    x:Class="KuromeKuroKit_WPF.Views.AboutSub"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
