fixes combobox display name not updated when renaming

--- a/KuromeKuroKit-WPF/Views/SettingsSub.xaml
+++ b/KuromeKuroKit-WPF/Views/SettingsSub.xaml
@@ -40,7 +40,7 @@
             Grid.Column="1"
             DisplayMemberPath="Name"
             ItemsSource="{Binding ProfileInfos}"
-            SelectedValue="{Binding UsingProfileInfo}"
+            SelectedItem="{Binding UsingProfileInfo}"
             SelectionChanged="cbUserProfile_SelectionChanged" />
         <!--
         -->
